medida de tendência central

--- a/_site.yml
+++ b/_site.yml
@@ -2,14 +2,10 @@ name: "R Markdown Websites Tutorial"
 navbar:
   title: "Jaqueline Fernandes"
   left:
-    - text: "First Observations"
-      href: first_observations.html
-    - text: "Basic Workflow"
-      href: basic_workflow.html
-    - text: "Getting Sophisticated"
-      href: getting_sophisticated.html
-    - text: "Your Turn"
-      href: your_turn.html
+    - text: "Frequência Básica"
+      href: frequencia.html
+    - text: "Medidas de Tendência Central"
+      href: tendenciacentral.html
 output_dir: "."
 output:
   html_document:
