--- a/_site.yml
+++ b/_site.yml
@@ -4,8 +4,11 @@ navbar:
   left:
     - text: "Frequência Básica"
       href: frequencia.html
+    - text: "Medidas de Dispersão"
+      href: medidasdispersao.html
     - text: "Medidas de Tendência Central"
       href: tendenciacentral.html
+
 output_dir: "."
 output:
   html_document:
